# pangaea

./: .env.example  CLAUDE.md  README.md  conftest.py  pyproject.toml
.github/workflows/: manifest-ci.yml  test.yml
docs/: pangaea-AGENTIC.md  pangaea-CLAUDE.md  pangaea-HEADLESS.md  syscall-flow.svg:Zone.Identifier
docs/manifests/: capability-evaluations.yaml  capability-evaluations.yaml:Zone.Identifier  capability-learning.yaml  capability-learning.yaml:Zone.Identifier  capability-manifest-v0.md  capability-staffing.yaml  capability-staffing.yaml:Zone.Identifier
docs/plan/: PANGAEA_MASTER.md  pangaea-BUILDPLAN.md
docs/vision/: pangaea-VISION.md  pangaea-vision-evolved.md
infra/: docker-compose.yml
infra/keycloak/: realm-pangaea.json
services/broker/: main.py  pyproject.toml
services/broker/broker/: exchange.py  models.py
services/broker/tests/: conftest.py  test_broker.py
services/gateway/: main.py  pyproject.toml
services/gateway/gateway/: ledger.py  models.py  push.py
services/gateway/tests/: conftest.py  test_ledger.py
services/registry/: main.py  pyproject.toml
services/registry/registry/: models.py  store.py
services/router/: main.py  pyproject.toml
stubs/people-data/: Dockerfile  capability.yaml  main.py  people_models.py  pyproject.toml
stubs/permissions/: Dockerfile  capability.yaml  main.py  permissions_models.py  pyproject.toml
stubs/tests/: conftest.py  test_stubs.py
stubs/timesheet/: Dockerfile  capability.yaml  main.py  pyproject.toml  timesheet_models.py
tests/e2e/: conftest.py  test_phase1_push_approval.py
(+12 files in other folders)
